@@ -700,6 +700,20 @@ static opj_bool j2k_read_unk_v2 (	opj_j2k_v2_t *p_j2k,
 									struct opj_event_mgr * p_manager );
 
 /**
+ * Reads a MCT marker (Multiple Component Transform)
+ *
+ * @param	p_header_data	the data contained in the MCT box.
+ * @param	p_j2k			the jpeg2000 codec.
+ * @param	p_header_size	the size of the data contained in the MCT marker.
+ * @param	p_manager		the user event manager.
+*/
+static opj_bool j2k_read_mct (	opj_j2k_v2_t *p_j2k,
+								OPJ_BYTE * p_header_data,
+								OPJ_UINT32 p_header_size,
+								struct opj_event_mgr * p_manager );
+
+
+/**
  * Copy the image header from the jpeg2000 codec into an external image_header
  *
  * @param	p_j2k			the jpeg2000 codec.
@@ -733,6 +747,17 @@ j2k_prog_order_t j2k_prog_order_list[] = {
 	{RLCP, "RLCP"},
 	{RPCL, "RPCL"},
 	{(OPJ_PROG_ORDER)-1, ""}
+};
+
+/**
+ * FIXME DOC
+ */
+const OPJ_UINT32 MCT_ELEMENT_SIZE [] =
+{
+	2,
+	4,
+	4,
+	8
 };
 
 typedef struct opj_dec_memory_marker_handler
@@ -791,12 +816,10 @@ const opj_dec_memory_marker_handler_t j2k_memory_marker_handler_tab [] =
   {J2K_MS_SOP, 0, 0},
   {J2K_MS_CRG, J2K_STATE_MH, j2k_read_crg_v2},
   {J2K_MS_COM, J2K_STATE_MH | J2K_STATE_TPH, j2k_read_com_v2},
-#ifdef TODO_MS /* FIXME */
   {J2K_MS_MCT, J2K_STATE_MH | J2K_STATE_TPH, j2k_read_mct},
-  {J2K_MS_CBD, J2K_STATE_MH , j2k_read_cbd},
+ /*FIXME MSD  {J2K_MS_CBD, J2K_STATE_MH , j2k_read_cbd},
   {J2K_MS_MCC, J2K_STATE_MH | J2K_STATE_TPH, j2k_read_mcc},
-  {J2K_MS_MCO, J2K_STATE_MH | J2K_STATE_TPH, j2k_read_mco},
-#endif
+  {J2K_MS_MCO, J2K_STATE_MH | J2K_STATE_TPH, j2k_read_mco}, */
 #ifdef USE_JPWL
 #ifdef TODO_MS /* FIXME */
   {J2K_MS_EPC, J2K_STATE_MH | J2K_STATE_TPH, j2k_read_epc},
@@ -4031,6 +4054,116 @@ static opj_dec_mstabent_t *j2k_dec_mstab_lookup(int id) {
 	}
 	return e;
 }
+
+
+/**
+ * Reads a MCT marker (Multiple Component Transform)
+ *
+ * @param	p_header_data	the data contained in the MCT box.
+ * @param	p_j2k			the jpeg2000 codec.
+ * @param	p_header_size	the size of the data contained in the MCT marker.
+ * @param	p_manager		the user event manager.
+*/
+opj_bool j2k_read_mct (	opj_j2k_v2_t *p_j2k,
+						OPJ_BYTE * p_header_data,
+						OPJ_UINT32 p_header_size,
+						struct opj_event_mgr * p_manager )
+{
+	OPJ_UINT32 i;
+	opj_tcp_v2_t *l_tcp = 00;
+	OPJ_UINT32 l_tmp;
+	OPJ_UINT32 l_indix;
+	opj_mct_data_t * l_mct_data;
+
+	/* preconditions */
+	assert(p_header_data != 00);
+	assert(p_j2k != 00);
+
+	l_tcp = p_j2k->m_specific_param.m_decoder.m_state == J2K_STATE_TPH ?
+			&p_j2k->m_cp.tcps[p_j2k->m_current_tile_number] :
+			p_j2k->m_specific_param.m_decoder.m_default_tcp;
+
+	if (p_header_size < 2) {
+		opj_event_msg_v2(p_manager, EVT_ERROR, "Error reading MCT marker\n");
+		return OPJ_FALSE;
+	}
+
+	/* first marker */
+	opj_read_bytes(p_header_data,&l_tmp,2);				/* Zmct */
+	p_header_data += 2;
+	if (l_tmp != 0) {
+		opj_event_msg_v2(p_manager, EVT_WARNING, "Cannot take in charge mct data within multiple MCT records\n");
+		return OPJ_TRUE;
+	}
+
+	if(p_header_size <= 6) {
+		opj_event_msg_v2(p_manager, EVT_ERROR, "Error reading MCT marker\n");
+		return OPJ_FALSE;
+	}
+
+	/* Imct -> no need for other values, take the first, type is double with decorrelation x0000 1101 0000 0000*/
+	opj_read_bytes(p_header_data,&l_tmp,2); 			/* Imct */
+	p_header_data += 2;
+
+	l_indix = l_tmp & 0xff;
+	l_mct_data = l_tcp->m_mct_records;
+
+	for (i=0;i<l_tcp->m_nb_mct_records;++i) {
+		if (l_mct_data->m_index == l_indix) {
+			break;
+		}
+		++l_mct_data;
+	}
+
+	/* NOT FOUND */
+	if (i == l_tcp->m_nb_mct_records) {
+		if (l_tcp->m_nb_mct_records == l_tcp->m_nb_max_mct_records) {
+			l_tcp->m_nb_max_mct_records += J2K_MCT_DEFAULT_NB_RECORDS;
+
+			l_tcp->m_mct_records = (opj_mct_data_t*)opj_realloc(l_tcp->m_mct_records,l_tcp->m_nb_max_mct_records * sizeof(opj_mct_data_t));
+			if(! l_tcp->m_mct_records) {
+				opj_event_msg_v2(p_manager, EVT_ERROR, "Error reading MCT marker\n");
+				return OPJ_FALSE;
+			}
+
+			l_mct_data = l_tcp->m_mct_records + l_tcp->m_nb_mct_records;
+			memset(l_mct_data ,0,(l_tcp->m_nb_max_mct_records - l_tcp->m_nb_mct_records) * sizeof(opj_mct_data_t));
+		}
+
+		l_mct_data = l_tcp->m_mct_records + l_tcp->m_nb_mct_records;
+	}
+
+	if (l_mct_data->m_data) {
+		opj_free(l_mct_data->m_data);
+		l_mct_data->m_data = 00;
+	}
+
+	l_mct_data->m_index = l_indix;
+	l_mct_data->m_array_type = (J2K_MCT_ARRAY_TYPE)((l_tmp  >> 8) & 3);
+	l_mct_data->m_element_type = (J2K_MCT_ELEMENT_TYPE)((l_tmp  >> 10) & 3);
+
+	opj_read_bytes(p_header_data,&l_tmp,2);				/* Ymct */
+	p_header_data+=2;
+	if (l_tmp != 0) {
+		opj_event_msg_v2(p_manager, EVT_WARNING, "Cannot take in charge multiple MCT markers\n");
+		return OPJ_TRUE;
+	}
+
+	p_header_size -= 6;
+
+	l_mct_data->m_data = (OPJ_BYTE*)opj_malloc(p_header_size);
+	if (! l_mct_data->m_data) {
+		opj_event_msg_v2(p_manager, EVT_ERROR, "Error reading MCT marker\n");
+		return OPJ_FALSE;
+	}
+	memcpy(l_mct_data->m_data,p_header_data,p_header_size);
+
+	l_mct_data->m_data_size = p_header_size;
+	++l_tcp->m_nb_mct_records;
+
+	return OPJ_TRUE;
+}
+
 
 /* ----------------------------------------------------------------------- */
 /* J2K / JPT decoder interface                                             */
